--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,15 @@
 *.exe
 *.out
 *.app
+
+# Temporary files
+*~
+.nfs*
+
+# build directory
+[Bb]uild
+
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+CMakeFiles
