--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,3 +3,7 @@ add_executable(helloworld helloworld.cpp)
 
 add_executable(tests tests.cpp)
 target_link_libraries(tests m)
+
+# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
+#add_executable(mileToKilometer mileToKilometer.cpp)
+#target_link_libraries(mileToKilometer m)
