--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(tests tests.cpp)
 
 # Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
 #add_executable(mileToKilometer mileToKilometer.cpp)
+tfukfrukfuy
